// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BonusPointsAvailabilityVanilla should render correctly 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    index={0}
    onPress={[Function]}
  >
    <Styled(BodyCopy)
      color="#4a4a4a"
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      text="Available For Future Use"
      textAlign="center"
    />
  </Styled(TouchableOpacity)>
  <Styled(View)
    index={1}
  >
    <Styled(BodyCopy)
      color="#4a4a4a"
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      text="Applied to Order"
      textAlign="center"
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`BonusPointsAvailabilityVanilla should render correctly with 1 bonus point 1`] = `
<Styled(View)>
  <Styled(TouchableOpacity)
    index={0}
    onPress={[Function]}
  >
    <Styled(BodyCopy)
      color="#4a4a4a"
      fontFamily="secondary"
      fontSize="fs10"
      fontWeight="extrabold"
      letterSpacing="ls071"
      text="Available For Future Use"
      textAlign="center"
    />
  </Styled(TouchableOpacity)>
</Styled(View)>
`;
